hw2-8 completed 4th try (getEmployees() method now returns Map)